--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <p id="product-name">ChatGPT</p>
     <!-- <a>Click Here </a>
     <a>Click Here </a> -->
-    <p class="time-text">today</p>
+    <p class="time-text" id="current-time">today</p>
     <p class="time-text">yesterday</p>
+    <script src="./todolist.js"></script>
   </body>
 </html>
