--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New tab</title>
     <link rel="icon" href="../Downloads/panda.png" type="image/png" />
-
+    <script defer src="./todolist.js"></script>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -14,6 +14,5 @@
     <a>Click Here </a> -->
     <p class="time-text" id="current-time">today</p>
     <p class="time-text">yesterday</p>
-    <script src="./todolist.js"></script>
   </body>
 </html>
