types of function in js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p id="product-name">ChatGPT</p>
     <!-- <a>Click Here </a>
     <a>Click Here </a> -->
-    <p class="time-text" id="current-time">today</p>
+    <p class="time-text" id="current-time">today <span id="flower">&#9880</span> </p>
     <p class="time-text">yesterday</p>
   </body>
 </html>
