unit conversion using input and button onclick event

--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
   </head>
   <body>
     <p id="product-name">ChatGPT</p>
-    <!-- <a>Click Here </a>
-    <a>Click Here </a> -->
-    <p class="time-text" id="current-time">today <span id="flower">&#9880</span> </p>
-    <p class="time-text">yesterday</p>
+    <div class="time">
+          <!-- <a>Click Here </a>
+        <a>Click Here </a> -->
+        <p class="time-text" id="current-time">today <span id="flower">&#9880</span> </p>
+        <p class="time-text">yesterday</p>
+    </div>
+    <hr class="separation">
+    <div class="unit-conversion">
+      <h2>Unit Conversion</h2>
+      <p class="units-title">Length:</p>
+      <input type="number" value="" class="input-units"><span> meters</span>
+      <button onclick="convertNow()"</button>Convert</button>
+     <div>
+       <p class="units-title">Result:</p>
+     <span class="result"></span>
+     </div>
+    </div>
     
+
   </body>
 </html>
