fibonacci print, and see in callstack in browser

--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
     <div class="unit-conversion">
       <h2>Unit Conversion</h2>
       <p class="units-title">Length:</p>
-      <input type="number" value="" class="input-units"><span> meters</span>
+      <input onChange=" convertNowInstantly()"type="number" value="" class="input-units"><span> meters</span>
       <button onclick="convertNow()"</button>Convert</button>
      <div>
-       <p class="units-title">Result:</p>
+       <p style="display:none;"class="units-title">Result:</p>
      <span class="result"></span>
      </div>
     </div>
+    <hr>
+    <!-- <div class="diva">
+      our tooltip div
+      <p class="newpara">
+     paragraph of tooltip
+    </p>
+    </div> -->
     
-
-  </body>
+      </body>
 </html>
